@@ -1,9 +1,5 @@
 package com.stickycoding.Rokon;
 
-import java.nio.ByteBuffer;
-import java.nio.ByteOrder;
-import java.nio.FloatBuffer;
-
 import javax.microedition.khronos.opengles.GL10;
 import javax.microedition.khronos.opengles.GL11;
 
@@ -14,21 +10,19 @@ import com.stickycoding.Rokon.OpenGL.RokonRenderer;
  * The emitter is the spawning point for particles, much work is still needed to be done here
  * @author Richard
  */
-public class Emitter {
-	public static final int MAX_PARTICLES = 100;
+public class Emitter extends DynamicObject {
+	public static int MAX_PARTICLES = 100;
+	public static int MAX_PARTICLE_MODIFIERS = 15;
 	
 	private Particle[] particleArr = new Particle[MAX_PARTICLES];
 	
 	private boolean _dead = false;
-	private float _x;
-	private float _y;
 	private float _rate;
-	private long _lastUpdate;
 	private Texture _texture;
-	
-	private int i, j, k;
-	
+	private int i, j, k, w;
 	private TextureBuffer _texBuffer;
+	
+	private ParticleModifier[] _particleModifier;
 
 	/**
 	 * @param x
@@ -37,12 +31,12 @@ public class Emitter {
 	 * @param texture texture of each particle
 	 */
 	public Emitter(float x, float y, float rate, Texture texture) {
-		_x = x;
-		_y = y;
+		super(x, y, 0, 0);
 		_rate = (1 / rate) * 1000;
 		_texture = texture;
-		_lastUpdate = Rokon.getTime();
 		_texBuffer = new TextureBuffer(texture);
+		_particleModifier = new ParticleModifier[MAX_PARTICLE_MODIFIERS];
+		setLastUpdate();
 	}
 	
 	/**
@@ -79,50 +73,51 @@ public class Emitter {
 		particleArr[j] = particle;
 	}
 	
-	private long now, timeDiff;
-	private int count;
+	private long _now, _timeDiff;
+	private int _count;
 	private void _updateSpawns() {
-		now = Rokon.getTime();
-		timeDiff = now - _lastUpdate;
-		count = Math.round(timeDiff / _rate);
-		if(count > 0) {
-			for(i = 0; i < count; i++)
+		_now = Rokon.getTime();
+		_timeDiff = _now - getLastUpdate();
+		_count = Math.round(_timeDiff / _rate);
+		if(_count > 0) {
+			for(i = 0; i < _count; i++)
 				_spawn();
-			_lastUpdate = now;
+			setLastUpdate();
 		}
 	}
 	
-	int texToBe;
+	private int _texToBe;
 	public void drawFrame(GL10 gl) {
 		_updateSpawns();
 		gl.glBlendFunc(GL10.GL_SRC_ALPHA, GL10.GL_DST_ALPHA);
 		gl.glTexCoordPointer(2, GL10.GL_FLOAT, 0, _texBuffer.buffer);
 		gl.glVertexPointer(2, GL11.GL_FLOAT, 0, RokonRenderer.vertexBuffer);
 
-		texToBe = TextureAtlas.texId[_texture.atlasIndex];
-		if(Rokon.getRokon().currentTexture != texToBe) {
-			gl.glBindTexture(GL10.GL_TEXTURE_2D, texToBe);
-			Rokon.getRokon().currentTexture = texToBe;
+		_texToBe = TextureAtlas.texId[_texture.atlasIndex];
+		if(Rokon.getRokon().currentTexture != _texToBe) {
+			gl.glBindTexture(GL10.GL_TEXTURE_2D, _texToBe);
+			Rokon.getRokon().currentTexture = _texToBe;
 		}
 		
 		for(i = 0; i < MAX_PARTICLES; i++) {
 			if(particleArr[i] != null) {
-				particleArr[i].update();
+				particleArr[i].updateMovement();
+				updateParticle(particleArr[i]);
 				if(particleArr[i].dead)
 					particleArr[i] = null;
 				else {
-					if(particleArr[i].x + particleArr[i].scale < 0 || particleArr[i].x > Rokon.getRokon().getWidth() || particleArr[i].y + particleArr[i].scale < 0 || particleArr[i].y > Rokon.getRokon().getHeight()) {
+					if(particleArr[i].getX() + particleArr[i].getWidth() < 0 || particleArr[i].getX() > Rokon.getRokon().getWidth() || particleArr[i].getY() + particleArr[i].getHeight() < 0 || particleArr[i].getY() > Rokon.getRokon().getHeight()) {
 						if(Rokon.getRokon().isForceOffscreenRender()) {
 							gl.glLoadIdentity();
-							gl.glTranslatef(particleArr[i].x, particleArr[i].y, 0);
-							gl.glScalef(particleArr[i].scale, particleArr[i].scale, 0);
+							gl.glTranslatef(particleArr[i].getX(), particleArr[i].getY(), 0);
+							gl.glScalef(particleArr[i].getWidth(), particleArr[i].getHeight(), 0);
 							gl.glColor4f(particleArr[i].red, particleArr[i].green, particleArr[i].blue, particleArr[i].alpha);
 							gl.glDrawArrays(GL10.GL_TRIANGLE_STRIP, 0, 4);
 						}
 					} else {
 						gl.glLoadIdentity();
-						gl.glTranslatef(particleArr[i].x, particleArr[i].y, 0);
-						gl.glScalef(particleArr[i].scale, particleArr[i].scale, 0);
+						gl.glTranslatef(particleArr[i].getX(), particleArr[i].getY(), 0);
+						gl.glScalef(particleArr[i].getWidth(), particleArr[i].getHeight(), 0);
 						gl.glColor4f(particleArr[i].red, particleArr[i].green, particleArr[i].blue, particleArr[i].alpha);
 						gl.glDrawArrays(GL10.GL_TRIANGLE_STRIP, 0, 4);
 					}
@@ -131,29 +126,6 @@ public class Emitter {
 		}
 		
 		gl.glBlendFunc(GL10.GL_SRC_ALPHA, GL10.GL_ONE_MINUS_SRC_ALPHA);
-	}
-	/**
-	 * Sets the coordinates of the Emitter
-	 * @param x
-	 * @param y
-	 */
-	public void setXY(float x, float y) {
-		_x = x;
-		_y = y;
-	}
-	
-	/**
-	 * @return the X coordinate of the Emitter
-	 */
-	public float spawnX() {
-		return _x;
-	}
-	
-	/**
-	 * @return the Y coordinate of the Emitter
-	 */
-	public float spawnY() { 
-		return _y;
 	}
 	
 	/**
@@ -175,5 +147,46 @@ public class Emitter {
 			if(particleArr[i] != null)
 				return false;
 		return true;
+	}
+	
+	/**
+	 * Updates a specific particle by applying all current ParticleModifier's
+	 * @param particle
+	 */
+	public void updateParticle(Particle particle) {
+		for(w = 0; w < _particleModifier.length; w++)
+			_particleModifier[w].onUpdate(particle);
+	}
+	
+	/**
+	 * Add's a ParticleModifer to the current collection
+	 * @param particleModifier
+	 */
+	public void addParticleModifier(ParticleModifier particleModifier) {
+		for(w = 0; w < _particleModifier.length; w++)
+			if(_particleModifier[w] == null) {
+				_particleModifier[w] = particleModifier;
+				return;
+			}
+	}
+	
+	/**
+	 * Removes a ParticleModifier from the Emitter, found by value
+	 * @param particleModifier
+	 */
+	public void removeParticleModifier(ParticleModifier particleModifier) {
+		for(w = 0; w < _particleModifier.length; w++)
+			if(_particleModifier[w] == particleModifier) {
+				_particleModifier[w] = null;
+				return;
+			}
+	}
+	
+	/**
+	 * Sets the ParticleModifier's for the Emitter, can be used with any length of array
+	 * @param particleModifier
+	 */
+	public void setParticleModifiers(ParticleModifier[] particleModifier) {
+		_particleModifier = particleModifier;
 	}
 }
